Wed Sep 15 16:39:46 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.idl: Improved auto_output tooltip.

Wed Sep 15 22:48:41 2004  Tim Janik  <timj@gtk.org>

        * *.idl: removed SFI_PARAM_ prefix from option constants.

Wed Sep 15 22:06:03 2004  Tim Janik  <timj@gtk.org>

	* bseiirfilter.c: fixup enum registration, according to recent
	BseExportNodeEnum changes.

Wed Sep 15 16:39:46 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.idl: Adjusted the threshold [dB] range to [-100,0],
	which is what was previously valid. This is due to compatibility;
	from a musicians point of view, thresholds below -30 dB or so probably
	don't make too much sense.
	Auto output is now a gui only property, since there are problems with
	the beast storage mechanism when it comes to properties which depend
	on each other.

	* artscompressor.cc: Added makeup gain correction factor (from jamin
	source), which should prevent over correction in automatic output
	amplification. Added a few CLAMPs to ensure that properties converted
	from old files will fit into our ranges.

Wed Sep 15 14:40:00 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.cc: Implemented more sensible half-life time computation,
	which handles corner-cases (very small attack/release times) better.

Sun Sep 12 03:47:11 2004  Tim Janik  <timj@gtk.org>

	* davbassfilter.idl:
	* davbassfilter.cc: added trigger input channel.

Sat Sep 11 14:35:11 2004  Tim Janik  <timj@gtk.org>

	* davbassfilter.cc: don't reset coefficients in reset().
	slight renames, removed temporary from class, fixed envelope
	counter in process() and removed useless code.

Wed Sep  8 17:00:04 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.idl artscompressor.cc: Cleanup: new documentation,
	volume related properties are dB now, compressor ratio is given as x:1
	and not as fraction (more intuitive), new property auto_output allows