@@ -1,3 +1,8 @@
+Mon Sep 20 01:10:00 2004  Tim Janik  <timj@gtk.org>
+
+	* davbassfilter.[ic]*: implemented automation for cutoff_perc, 
+	reso_perc, env_mod and env_decay.
+
 Wed Sep 15 16:39:46 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* artscompressor.idl: Improved auto_output tooltip.
